--- a/sp2/css/sb-admin-2.css
+++ b/sp2/css/sb-admin-2.css
@@ -10976,6 +10976,16 @@ form.user .btn-user {
   width: 12.5rem;
 }
 
+.error:not(.form-group ~ *) {
+  width: 100%;
+}
+
+.error:not(input) {
+  width: 100%;
+}
+
+:not(.form-group ~ *)
+
 @-webkit-keyframes noise-anim {
   0% {
     clip: rect(49px, 9999px, 40px, 0);
@@ -11278,4 +11288,8 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
+}
+
+.breadcrumbs, .breadcrumbs a{
+  color: #FFF;
 }
