--- a/sp2/css/sb-admin-2.css
+++ b/sp2/css/sb-admin-2.css
@@ -11291,7 +11291,7 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 .breadcrumbs, .breadcrumbs a{
-  color: #FFF;
+  color: #858796;
 }
 
 .portlet-title {
